# Pydowndoc

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  LICENSE-downdoc-bin  README.adoc  hatch_build.py  pyproject.toml
.github/: CODEOWNERS  renovate.json  zizmor.yaml
.github/workflows/: autofix-pre-commit.yaml  build-npm-binaries.yaml  check-build-publish.yaml  check_build_publish.yaml  publish-pypi-redirects.yaml  pyroma-package-check.yaml  schedule-downdoc-updates.yaml  upload-downdoc-binaries.yaml
.pypi-redirects/Pydowndoc-executable/: pyproject.toml
.pypi-redirects/downdoc/: pyproject.toml
Pydowndoc-bin/: LICENSE  hatch_build.py  pyproject.toml
hatch_downdoc_readme/: __init__.py
pydowndoc/: __init__.py  __main__.py  _utils.py  console.py  conversion_backends.py  hatch_hooks.py  utils.py
stubs/setuptools_scm/: __init__.pyi  version.pyi
