[build-system]
build-backend = "hatchling.build"
requires = ["hatch-vcs", "hatchling"]

[project]
authors = [
    { name = "Dan Allen", email = "dan@opendevise.com" },
    { name = "Matt Norton", email = "matt@carrotmanmatt.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development",
]
description = "Installable package for the downdoc binary executable."
dynamic = ["version"]
keywords = ["AsciiDoc", "Markdown", "converter", "documentation"]
license = "MIT"
license-files = ["LICENSE"]
maintainers = [{ name = "Matt Norton", email = "matt@carrotmanmatt.com" }]
name = "Pydowndoc-bin"
readme = { content-type = "text/markdown", text = "Installable package for the downdoc binary executable." }

[project.urls]
Repository = "https://github.com/CarrotManMatt/Pydowndoc"

[tool.hatch.version]
raw-options = { local_scheme = "no-local-version", version_scheme = "python-simplified-semver", root = ".." }
source = "vcs"

[tool.uv]
managed = false
package = false
trusted-publishing = "always"
