[project]
name = "Pydowndoc-bin"
description = "Installable package for the downdoc binary executable."
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Dan Allen", email = "dan@opendevise.com" },
    { name = "Matt Norton", email = "matt@carrotmanmatt.com" }
]
maintainers = [{ name = "Matt Norton", email = "matt@carrotmanmatt.com" }]
keywords = ["AsciiDoc", "Markdown", "converter", "documentation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development"
]
dynamic = ["version"]

[project.readme]
text = """
Installable package for the downdoc binary executable.

See [Pydowndoc](https://pypi.org/project/Pydowndoc) for the primary package and documentation.
"""
content-type = "text/markdown"

[project.urls]
Issues = "https://github.com/opendevise/downdoc/issues"
Releases = "https://github.com/opendevise/downdoc/tags"
Repository = "https://github.com/CarrotManMatt/Pydowndoc/tree/main/Pydowndoc-bin"

[build-system]
requires = ["hatchling", "packaging", "setuptools-scm"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks]
custom = {  }

[tool.uv]
managed = false
package = false
trusted-publishing = "always"
