[project]
name = "Pydowndoc-executable"
version = "1.1.0"
description = "You tried to install \"Pydowndoc-executable\". The correct package name is \"Pydowndoc-bin\"."
authors = [{ name = "Matt Norton", email = "matt@carrotmanmatt.com" }]
classifiers = ["Development Status :: 7 - Inactive"]
dependencies = ["Pydowndoc-bin"]

[project.readme]
text = """
You tried to install `Pydowndoc-executable`. The correct package name is `Pydowndoc-bin`.

See [Pydowndoc](https://pypi.org/project/Pydowndoc) for the primary package and documentation.
"""
content-type = "text/markdown"

[project.urls]
Repository = "https://github.com/CarrotManMatt/Pydowndoc"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.uv]
managed = false
package = false
trusted-publishing = "always"
